# mesycontrol

./: .gitchangelog.rc  .gitignore  CMakeLists.txt  CPackOptions.cmake.in  Dockerfile  Dockerfile.debian-stable  Dockerfile.ubuntu-22.04  Dockerfile.ubuntu-22.04-gui  Dockerfile.ubuntu-22.04-nogui  README.md  app_model.py  basic_model.py  changelog.md  config_tree_view.py  container-default-argument.cc  cpp_ios_exceptions.cc  eventloop_callback.py  mc_script_test.py  mc_treeview.py  mesycontrol-memory-brainstorm.py  parse-hex-number.cpp  protocol.py  pyqt-promise.py  pyqt-signals.py  pyqtgraph-crash-test.py
cmake/: NSIS.template.in
doc/: CMakeLists.txt  Doxyfile-client  Doxyfile-server  LICENCES  README-scripting.txt  TODO  TODO2.txt  architecture.dia  connection-handling.txt  design-notes.txt  device_classes.dia  gen-proto-tables.py  mesycontrol-py-help.txt  timings.txt
doc/sphinx/: Makefile  architecture.dia  architecture.dot  client.rst  conf.py.in  index.rst  make.bat  scripting.rst  server.rst
doc/sphinx/source/: .conf.py.swp  .index.rst.swp  conf.py  index.rst  server.rst
enum-string-conversion-cpp/src/: CMakeLists.txt  enums.cc  enums.h  main.cc
libledwidget/: ledwidget.cc  ledwidget.h  ledwidget.pri  ledwidget.pro  ledwidget_designer_plugin.cc  ledwidget_designer_plugin.h
mc_tree/: config_tree_model.py  hardware_model.py
mesycontrol-treeviews/: app_model.py  basic_model.py  basic_tree_model.py  config_tree_model.py  future.py  hardware_model.py  hardware_tree_model.py  main.py  mc_treeview.py  setup_model.py  setup_tree_model.py  setup_tree_view.py  util.py
mesycontrol_treeviews/: basic_model.py  config_model.py  config_tree_model.py  hardware_controller.py  hardware_tree_view.py  mc_treeview.py  mrc_connection.py  qt.py  util.py
mrc-python-serial/: main.py
qgroupbox-editable-title/: qgroupbox_editable_title.h
qt-doublespinbox-locale/: main.cc  qt-doublespinbox-locale.pro
qt-movetothread-qobject-children/: child_object.cc  child_object.h  (+6 more)
qxtrpc-mutex-long-wait/src/: CMakeLists.txt  QxtConfig.cmake  client.cc  client.h  clientmain.cc  main.cc  server.cc  server.h  servermain.cc
serial-tester-boost-asio/src/: CMakeLists.txt  main.cc
src/: CMakeLists.txt  config.in.h  git_sha1.cc.in  git_sha1.h  mesycontrol.proto  protocol.cc
src/cli/: mesycontrol.py  mesycontrol_cli.py
src/client/: CMakeLists.txt  Makefile  cxfreeze_ConsoleSetLibPath.py  cxfreeze_init.py  gui2.py  logging-dev.ini  mesycontrol_cli.py  mesycontrol_gui.bat  mesycontrol_gui.exe.manifest  mesycontrol_gui.py  mesycontrol_gui.spec  mesycontrol_script.py  mesycontrol_script_runner.py  model_test.py  pyproject.toml  setup.py  setup.py.in  setup.py.moved  simple_shell.py  test-virtual-controller.py
src/client/mesycontrol/: Makefile  __init__.py  app_context.py  app_model.py  application_model.py  application_registry.py  async_util.py  basic_model.py  basic_tree_model.py  command.py  config.py  config_algo.py  config_gui.py  config_loader.py  config_model.py  config_tree_model.py  config_tree_view.py  config_util.py  config_xml.py  dev_splitter_layout_test.py  device.py  device_config.py  device_config_loader.py  device_config_xml.py  device_description.py  device_description_mhv4.py  device_description_mhv4_800v.py  device_description_mscf16.py  device_model.py  device_profile.py  device_profile_mcfd16.py  device_profile_mhv4.py  device_profile_mhv4_800v.py  device_profile_mscf16.py  device_profile_stm16.py  device_registry.py  device_tableview.py  device_view.py  device_view_model.py  device_widget.py  (+53 more)
src/client/mesycontrol/devices/: __init__.py  device_profile_mcfd16.py  device_profile_mhv4.py  device_profile_mscf16.py  device_profile_stm16.py  mcfd16.py  mcfd16_ng.py  mcfd16_profile.py  mhv4.py  mhv4_ng.py  mhv4_profile.py  mhv4_v20.py  mhv4_v20_profile.py  mpd4.py  mpd4_profile.py  mpd8.py  mpd8_profile.py  mprb16.py  mprb16_profile.py  mprb16dr.py  mprb16dr_profile.py  mscf16.py  mscf16_ng.py  mscf16_profile.py  mux16.py  mux16_profile.py  stm16.py  stm16_ng.py  stm16_profile.py
src/client/mesycontrol/resources/: gpl-notice.txt  quickstart.html
src/client/mesycontrol/scripts/: __init__.py  auto_poll_parameters.py  auto_poll_to_influxdb.py  scanbus.py  scanbus_basic.py  scanbus_device_profiles.py  script_runner.py  script_runner_test_script.py  set_mcfd16_thresholds.py  set_mhv4_parameters.py
src/client/mesycontrol/scripts/standalone/: __init__.py  auto_poll_to_influxdb.py  scanbus_device_profiles_standalone.py  scanbus_standalone.py  set_mcfd16_thresholds_standalone.py  set_mhv4_parameters_standalone.py
src/client/mesycontrol/test/: test_app_model.py  test_basic_model.py  test_config_model.py  test_config_xml.py  test_device_tableview.py  test_hw_model.py  test_protocol.py  test_setup.py  test_util.py
src/client/mesycontrol/ui/: connect_dialog.py  connect_dialog.ui  device_tableview_settings.ui  device_widget.ui  dialogs.py  gpl.txt  mainwin.ui  mhv4_channel.ui  mhv4_channel_settings.ui  mhv4_channel_without_settings.ui  mhv4_global_settings.ui  mhv4_settings_times_four.ui  mhv4_v20_channel.ui  mhv4_v20_settings.ui  mscf16_channel_settings.ui  mscf16_global_settings.ui  mscf16_panel.ui  mscf16_settings.ui  subprogress_widget.ui  window-icon.xcf
src/client/ui/: connect_dialog.ui  device_widget.ui  mainwin.ui  mhv4_channel.ui
src/gui/: CMakeLists.txt  main.cc  mainwin.cc  mainwin.h  qt_tcp_client.cc  qt_tcp_client.h  tcp_client.cc  tcp_client.h  tcp_client_new.h
src/python/: mesycontrol_cli.py
src/python/ui/: mainwin.ui
src/server/: CMakeLists.txt  accumulator.hpp  handler_types.h  install_server_deps.cmake  logging.cc  logging.h  main.cc  mrc1_connection.cc  mrc1_connection.h  mrc1_reply_parser.cc  mrc1_reply_parser.h  mrc1_request_queue.cc  mrc1_request_queue.h  mrc_comm.cc  mrc_comm.h  poller.cc  poller.h  protocol.cc  protocol.h  request_dispatcher.cc  request_dispatcher.h  tcp_connection.cc  tcp_connection.h  tcp_connection_manager.cc  tcp_connection_manager.h  tcp_server.cc  tcp_server.h  util.h
src/server/test/: CMakeLists.txt  test_mrc1_reply_parser.cc
(+36 files in other folders)
