find_package(PythonInterp REQUIRED)

set(SETUP_PY_IN "${CMAKE_CURRENT_SOURCE_DIR}/setup.py.in")
set(SETUP_PY    "${CMAKE_CURRENT_BINARY_DIR}/setup.py")
set(STAMP       "${CMAKE_CURRENT_BINARY_DIR}/build/timestamp")

set(PYTHON_SOURCES
    "${SETUP_PY_IN}"
    "${CMAKE_CURRENT_SOURCE_DIR}/cxfreeze_init.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol_gui.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol_script_runner.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/app_context.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/app_model.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/command.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/config_loader.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/config.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/config_xml.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/device_profile_mhv4.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/device_profile_mscf16.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/device_profile.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/device_tableview.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/hw_model.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/__init__.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/mhv4.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/mrc_command.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/mrc_connection.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/mrc_controller.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/protocol.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/script.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/server_process.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/setup_treeview.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/tcp_client.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/ui/connect_dialog.ui"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/ui/__init__.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/ui/mainwin.ui"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/ui/mhv4_channel.ui"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/ui/mscf16_panel.ui"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/util.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/ui/applications-utilities.png"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/ui/connect_dialog.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/ui/connect_dialog.ui"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/ui/__init__.py"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/ui/mainwin.ui"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/ui/mhv4_channel_settings.ui"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/ui/mhv4_channel.ui"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/ui/mhv4_channel_without_settings.ui"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/ui/mhv4_global_settings.ui"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/ui/mhv4_settings_times_four.ui"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/ui/mscf16_panel.ui"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesycontrol/ui/preferences-system.png"
)

configure_file(${SETUP_PY_IN} ${SETUP_PY})

if (WIN32)
  # On Windows the command line does not work correctly:
  # "C:\<some-path>" becomes "C:<some-path>"
  # Using a relative prefix works and installs under the current binary dir.
  set(DISTUTILS_PREFIX "python-install")
else (WIN32)
  set(DISTUTILS_PREFIX "${CMAKE_BINARY_DIR}/python-install")
endif (WIN32)

# Run the generated distutils setup.py script to build the binaries and install
# into the build directory.
add_custom_command(OUTPUT ${STAMP}
    COMMAND ${PYTHON_EXECUTABLE} ${SETUP_PY} install --prefix="${DISTUTILS_PREFIX}"
    COMMAND ${CMAKE_COMMAND} -E touch ${STAMP}
    DEPENDS ${PYTHON_SOURCES})

add_custom_target(mesycontrol_clients ALL DEPENDS ${STAMP})

# Installation rules for the files generated by distutils.
if (WIN32)
    install(DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/python-install/" DESTINATION bin)
else (WIN32)
    install(DIRECTORY ${CMAKE_BINARY_DIR}/python-install/bin/
	    DESTINATION bin USE_SOURCE_PERMISSIONS)
    install(DIRECTORY ${CMAKE_BINARY_DIR}/python-install/lib/
	    DESTINATION lib USE_SOURCE_PERMISSIONS
    PATTERN "*mesycontrol_gui"
        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
                GROUP_EXECUTE GROUP_READ
            WORLD_EXECUTE WORLD_READ
    PATTERN "*mesycontrol_script_runner"
        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
                GROUP_EXECUTE GROUP_READ
            WORLD_EXECUTE WORLD_READ)
endif (WIN32)

# vim:tw=0
