[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4", "pyshortcuts"]
build-backend = "setuptools.build_meta"

[project]
name = "mesycontrol"
description='mesytec NIM module control GUI'
dynamic = ["version"]
dependencies = [
    'pyshortcuts==1.8.0',
    'PySide2',
    'shiboken2',
    'numpy<2',
    'pyqtgraph',
    'protobuf',
]

[tool.setuptools_scm]
root = "../../"

[project.gui-scripts]
mesycontrol_gui = "mesycontrol:mesycontrol_gui_main"

[project.scripts]
mesycontrol_scanbus_device_profiles = "mesycontrol.scripts:scanbus_device_profiles_main"
mesycontrol_scanbus = "mesycontrol.scripts:scanbus_main"
mesycontrol_script_runner = "mesycontrol:script_runner_main"
