[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4", "pyshortcuts"]
build-backend = "setuptools.build_meta"

[project]
name = "mesycontrol"
description='mesytec NIM module control GUI'
dynamic = ["version"]
dependencies = [
    'pyshortcuts==1.8.0',
    'PySide2',
    'shiboken2',
    'numpy<2',
    'pyqtgraph',
    'protobuf',
]

[tool.setuptools_scm]
root = "../../"

[project.gui-scripts]
mesycontrol_gui = "mesycontrol:mesycontrol_gui_main"

[project.scripts]
mesycontrol_script_runner = "mesycontrol:script_runner_main"
mesycontrol_scanbus = "mesycontrol.scripts:scanbus_main"
mesycontrol_scanbus_basic = "mesycontrol.scripts:scanbus_basic_main"
mesycontrol_auto_poll = "mesycontrol.scripts:auto_poll_parameters_main"
mesycontrol_auto_poll_to_influxdb = "mesycontrol.scripts:auto_poll_to_influxdb_main"
